--- a/gazeplay-data/src/main/resources/data/stylesheets/base-max-width-2560.css
+++ b/gazeplay-data/src/main/resources/data/stylesheets/base-max-width-2560.css
@@ -8,9 +8,9 @@
 }
 
 .gameChooserButtonVertical {
-    -fx-min-width: 16em;
+    -fx-min-width: 18em;
     -fx-min-height: 20em;
-    -fx-pref-width: 16em;
+    -fx-pref-width: 18em;
     -fx-pref-height: 20em;
 }
 
